updatering av layout //Jacob

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="logo_desc">Bumbibjörnarna</string>
     <string name="spela">Spela</string>
     <string name="lagg_till_fragor">Lägg till frågor</string>
-    <string name="Frågefeuden">title_desc</string>
+    <string name="title_desc">Frågefeuden</string>
 </resources>
